--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "1.0.0",
   "description": "lowdb sample for 1.125",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "start": "node --experimental-modules ./index.js"
   },
   "author": "abel@mit.edu",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.0",
     "jsonwebtoken": "^9.0.0",
     "lowdb": "^1.0.0",
     "mongodb": "^3.7.3",
+    "node": "^20.1.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "webpack": "^5.82.1"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^4.0.7"
   }
 }
